css + autre modifier

--- a/Le_BONK/header.css
+++ b/Le_BONK/header.css
@@ -39,10 +39,12 @@ nav{
   align-items: center;
   list-style: none;
   width: 500px;
+  padding-right: 10px;
 }
 .menu li a {
   color: aliceblue;
   text-decoration: none;
+  
 }
 .btn{
   border: 0;
@@ -75,4 +77,19 @@ form {
   top: 50%;
   transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%);
+}
+.form-jh {
+  text-align: center;
+  border-color:none;
+  padding-bottom: -500px;
+  width: 350px;
+  height: auto;
+  position: absolute;
+  left: 50%;
+  top: 250%;
+  bottom: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  
+
 }
